test/valid/mutability/mutable-indexassign-app.js
function f(x) { return x; }

var x = [];

x[0] = f(3);

f('a');
